--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chef-vacaciones",
+  "name": "node-typescript-mysql",
   "version": "1.0.0",
-  "description": "",
+  "description": "A node backend with typescript and mysql",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.6.0"
