--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -28,6 +29,7 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
     "@types/mysql": "^2.15.15",
-    "@types/node": "^14.6.0"
+    "@types/node": "^14.6.0",
+    "@types/uuid": "^8.3.0"
   }
 }
