--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/multer": "^1.4.4",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.6.0",
+    "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0"
   }
 }
