--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "uuid": "^8.3.0"
@@ -30,7 +30,6 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
-    "@types/mysql": "^2.15.15",
     "@types/node": "^14.6.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/uuid": "^8.3.0"
